HelloUltraviolet/Fixtures/RejectedSource/FFI/ExternCallSafety/Expected.uv
//! Expected diagnostic metadata for the ExternCallSafety rejected-source specimen.

expectedDiagnostic("E-TYP-2106", "requirement.23.ExternCallSafety")
